--- a/todo-project/src/main/resources/application.properties
+++ b/todo-project/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-
 spring.jpa.show-sql=true
 
 spring.jpa.generate-ddl=true
@@ -7,7 +6,7 @@ spring.jpa.database=mysql
 
 
 spring.datasource.url=jdbc:mysql://localhost:3306/tododb?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
-spring.datasource.username=root
+spring.datasource.username=todoadmin
 spring.datasource.password=xodxod22;
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
